[gd_scene load_steps=25 format=2]

[ext_resource path="res://Player/Weapons/Pistol/bullet0001.png" type="Texture" id=1]
[ext_resource path="res://Player/Weapons/Pistol/Bullet.gd" type="Script" id=3]
[ext_resource path="res://Other Resources/light.png" type="Texture" id=4]
[ext_resource path="res://Particles/floaty_32.png" type="Texture" id=5]
[ext_resource path="res://Player/Weapons/Pistol/bullet0003.png" type="Texture" id=6]
[ext_resource path="res://Player/Weapons/Pistol/bullet0002.png" type="Texture" id=7]
[ext_resource path="res://Player/Weapons/Pistol/bullet0000.png" type="Texture" id=8]
[ext_resource path="res://Player/Weapons/Pistol/bullet_explosion0001.png" type="Texture" id=9]
[ext_resource path="res://Player/Weapons/Pistol/bullet_explosion0002.png" type="Texture" id=10]
[ext_resource path="res://Player/Weapons/Pistol/bullet_explosion0000.png" type="Texture" id=11]
[ext_resource path="res://Player/Weapons/Pistol/bullet_explosion0003.png" type="Texture" id=12]
[ext_resource path="res://Player/Weapons/Pistol/bullet_explosion0005.png" type="Texture" id=13]
[ext_resource path="res://Player/Weapons/Pistol/bullet_explosion0004.png" type="Texture" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 1 ), ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 13 ) ],
"loop": false,
"name": "death",
"speed": 30.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.95995, 5.78785 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6.45826, 3.95244 )

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 7
particles_anim_v_frames = 7
particles_anim_loop = false

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.444444 )
colors = PoolColorArray( 0.952941, 0.658824, 0.2, 1, 0.243137, 0.231373, 0.396078, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 25.0
gravity = Vector3( -100, 0, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 1.0
scale = 2.0
color_ramp = SubResource( 6 )
anim_speed = 1.0

[sub_resource type="CanvasItemMaterial" id=8]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 7
particles_anim_v_frames = 7
particles_anim_loop = false

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0, 0.57037 )
colors = PoolColorArray( 0.952941, 0.658824, 0.2, 1, 0.243137, 0.231373, 0.396078, 1 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
flag_disable_z = true
direction = Vector3( -10, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 379.31
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
color_ramp = SubResource( 10 )
anim_speed = 1.0

[node name="Bullet" type="KinematicBody2D"]
z_index = 1
z_as_relative = false
collision_layer = 0
script = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
light_mask = 2
z_index = 1
frames = SubResource( 1 )
frame = 2
playing = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 4 )
texture_scale = 0.25
color = Color( 0.952941, 0.658824, 0.2, 1 )
energy = 0.5
range_item_cull_mask = 3

[node name="TrailParticles" type="Particles2D" parent="."]
material = SubResource( 4 )
position = Vector2( 2.677, 0 )
amount = 12
lifetime = 3.0
process_material = SubResource( 7 )
texture = ExtResource( 5 )

[node name="ImpactParticles" type="Particles2D" parent="."]
material = SubResource( 8 )
emitting = false
amount = 10
lifetime = 0.2
one_shot = true
explosiveness = 1.0
fract_delta = false
process_material = SubResource( 11 )
texture = ExtResource( 5 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
